# standalone-sig-verifier-web

./: Cargo.toml  README.md
.github/workflows/: pull_request.yml  release.yml
src/: lib.rs
